--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <button type="submit" class="btn btn-primary">
           <i class="fa fa-send"></i>&nbsp;&nbsp;Go!
         </button>
+        <button type="reset" id="reset" value="reset" class="btn btn-danger">
+          <i class="fa fa-ban"></i>
+        </button>
       </div>
     </div>
   </form>
