added reset functionality

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </form>
   </div>
 
-  <div id='map'></div>
+  <div class="container" id='map'></div>
 
   <!-- js dependencies -->
   <script src="bower_components/jquery/dist/jquery.min.js "></script>
